# liquid_crystal_simulator

./: .gitignore  README.md  config.ini  dt_euler_finder.py  jax_simulation_data.pkl  pyproject.toml  requirements.txt  run_simulations.py  visualize.py
scripts/: __init__.py  dt_euler_finder.py  run_simulations.py  visualize.py
src/: __init__.py  config.py  visualization.py
src/common/: __init__.py  boundary.py
src/jax_backend/: __init__.py  boundary.py  boundary_conditions.py  diff.py  jax_runner.py  q_tensor.py  runner.py
src/numpy_backend/: __init__.py  boundary_conditions.py  diff.py  numpy_runner.py  q_tensor.py  runner.py
